--- a/sun-middle/requirements.txt
+++ b/sun-middle/requirements.txt
@@ -5,10 +5,18 @@ isort==5.13.2
 mccabe==0.7.0
 mypy==1.13.0
 mypy-extensions==1.0.0
+numpy==2.0.2
 packaging==24.2
+pandas==2.2.3
+pandas-stubs==2.2.2.240807
 pathspec==0.12.1
 platformdirs==4.3.6
 pycodestyle==2.12.1
 pyflakes==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+six==1.16.0
 tomli==2.1.0
+types-pytz==2024.2.0.20241003
 typing_extensions==4.12.2
+tzdata==2024.2
