--- a/sun-middle/requirements.txt
+++ b/sun-middle/requirements.txt
@@ -1,22 +1,104 @@
+aiobotocore==2.15.2
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.2
+aioitertools==0.12.0
+aiosignal==1.3.1
+asdf==3.5.0
+asdf-astropy==0.6.1
+asdf_coordinates_schemas==0.3.0
+asdf_standard==1.1.1
+asdf_transform_schemas==0.5.0
+astropy==6.0.1
+astropy-iers-data==0.2024.11.11.0.32.38
+asttokens==2.4.1
+async-timeout==5.0.1
+attrs==24.2.0
+beautifulsoup4==4.12.3
 black==24.10.0
+bleach==6.2.0
+botocore==1.35.36
+Bottleneck==1.4.2
+certifi==2024.8.30
+cfgv==3.4.0
 click==8.1.7
+cloudpickle==3.1.0
+contourpy==1.3.0
+cycler==0.12.1
+dask==2024.8.0
+decorator==5.1.1
+distlib==0.3.9
+exceptiongroup==1.2.2
+executing==2.1.0
+filelock==3.16.1
 flake8==7.1.1
+fonttools==4.55.0
+frozenlist==1.5.0
+fsspec==2024.10.0
+h5py==3.12.1
+html5lib==1.1
+identify==2.6.2
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iniconfig==2.0.0
+ipython==8.18.1
 isort==5.13.2
+jedi==0.19.2
+jmespath==1.0.1
+jplephem==2.22
+kiwisolver==1.4.7
+locket==1.0.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
 mccabe==0.7.0
+mpmath==1.3.0
+multidict==6.1.0
 mypy==1.13.0
 mypy-extensions==1.0.0
-numpy==2.0.2
+nodeenv==1.9.1
+numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
 pandas-stubs==2.2.2.240807
+parso==0.8.4
+partd==1.4.2
 pathspec==0.12.1
+pexpect==4.9.0
+pillow==11.0.0
 platformdirs==4.3.6
+pluggy==1.5.0
+pre_commit==4.0.1
+prompt_toolkit==3.0.48
+propcache==0.2.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.0.0
 pycodestyle==2.12.1
+pyerfa==2.0.1.5
 pyflakes==3.2.0
+Pygments==2.18.0
+pyparsing==3.2.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
+s3fs==2024.10.0
+scipy==1.13.1
+semantic-version==2.10.0
 six==1.16.0
+sortedcontainers==2.4.0
+soupsieve==2.6
+stack-data==0.6.3
 tomli==2.1.0
+toolz==1.0.0
+traitlets==5.14.3
 types-pytz==2024.2.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==1.26.20
+virtualenv==20.27.1
+wcwidth==0.2.13
+webencodings==0.5.1
+wrapt==1.16.0
+yarl==1.17.1
+zipp==3.21.0
