--- a/blockchain-data-science/pyproject.toml
+++ b/blockchain-data-science/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=7.1.0",
+    "matplotlib==3.10.8",
     "pandas==3.0.0rc0",
     "pandas-stubs==2.3.3.251201",
 ]
