--- a/blockchain-data-science/pyproject.toml
+++ b/blockchain-data-science/pyproject.toml
@@ -7,5 +7,5 @@ dependencies = [
     "ipykernel>=7.1.0",
     "matplotlib==3.10.8",
     "pandas==3.0.0rc0",
-    "pandas-stubs==2.3.3.251201",
+    "pandas-stubs~=3.0.0rc0",
 ]
